--- a/User_Dashboard/style.css
+++ b/User_Dashboard/style.css
@@ -26,6 +26,20 @@
 .fa-folder {
   font-size: 48px; /* Cambia el tamaño a 48 píxeles */
 }
+
+.fa-file-pdf {
+  font-size: 48px; /* Cambia el tamaño a 48 píxeles */
+}
+
+.fa-file-lines {
+  font-size: 48px; /* Cambia el tamaño a 48 píxeles */
+}
+
+.imagenesicons{
+  width: 60px;
+  height: 60px;
+}
+
 .folder-icon {
   display: inline-block;
   text-align: center;
@@ -36,11 +50,60 @@
   display: block;
 }
 
+
+.fa-file-pdf {
+  display: inline-block;
+  text-align: center;
+}
+
+.folder-icon .fa-file-pdf {
+  font-size: 48px;
+  display: block;
+}
+
+.fa-file-lines {
+  display: inline-block;
+  text-align: center;
+}
+
+.folder-icon .fa-file-lines {
+  font-size: 48px;
+  display: block;
+}
+
+
+.imagenesicons {
+  display: inline-block;
+  text-align: center;
+}
+
+.folder-icon .imagenesicons {
+  font-size: 48px;
+  display: block;
+}
+
 .folder-name {
+  font-size: 16px;
+}
+
+.pdf-name {
+  font-size: 10px;
+}
+
+.text-name {
   font-size: 16px;
 }
 
 i{
   margin: 10px;
   padding: 10px;
+}
+img{
+  margin: 10px;
+  padding: 10px;
+}
+
+span{
+  margin: 3px;
+  padding: 3px;
 }
